style of the game over page and refacto of all the pages style

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,51 +10,6 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Damascus';
-  src: url('../fonts/Damascus.eot');
-  src: url('../fonts/Damascus.woff2') format('woff2'),
-       url('../fonts/Damascus.woff') format('woff'),
-       url('../fonts/Damascus.svg#Damascus') format('svg'),
-       url('../fonts/Damascus.eot?#iefix') format('embedded-opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'DamascusMedium';
-  src: url('../fonts/DamascusMedium.eot');
-  src: url('../fonts/DamascusMedium.woff2') format('woff2'),
-       url('../fonts/DamascusMedium.woff') format('woff'),
-       url('../fonts/DamascusMedium.svg#DamascusMedium') format('svg'),
-       url('../fonts/DamascusMedium.eot?#iefix') format('embedded-opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'DamascusPUA';
-  src: url('../fonts/DamascusPUA.eot');
-  src: url('../fonts/DamascusPUA.woff2') format('woff2'),
-       url('../fonts/DamascusPUA.woff') format('woff'),
-       url('../fonts/DamascusPUA.ttf') format('truetype'),
-       url('../fonts/DamascusPUA.svg#DamascusPUA') format('svg'),
-       url('../fonts/DamascusPUA.eot?#iefix') format('embedded-opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '../fonts/DamascusPUABold';
-  src: url('../fonts/DamascusPUABold.eot');
-  src: url('../fonts/DamascusPUABold.woff2') format('woff2'),
-       url('../fonts/DamascusPUABold.woff') format('woff'),
-       url('../fonts/DamascusPUABold.ttf') format('truetype'),
-       url('../fonts/DamascusPUABold.svg#DamascusPUABold') format('svg'),
-       url('../fonts/DamascusPUABold.eot?#iefix') format('embedded-opentype');
-  font-weight: normal;
-  font-style: normal;
-}
 /* FIN FONTS */
 
 /* GENERAL */
@@ -86,153 +41,8 @@ h2{
   font-family: 'DamascusPUA', sans-serif;
 }
 
-/* GENERAL */
-
-/* HOMEPAGE */
-
-.header-content{
-  height: 13%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container-content{
-  height: 100vh;
-}
-
-.container{
-  background-color: #E4D3CC;
-  max-width: 100%;
-  height: 87%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.container-categories{
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.categories{
-  width: 26%;
-  display: inline-block;
-  color: white;
-  background-color: #341D9D;
-  margin-bottom: 50px;
-  padding: 29px 0;
+a {
   text-decoration: none;
-  border-radius: 20px;
-  font-size: 30px;
-  text-transform: lowercase;
-  font-family: 'DamascusMedium', sans-serif;
-}
-.categories::first-letter{
-  text-transform: uppercase;
 }
 
-/* FIN HOMEPAGE */
-
-
-/* PAGE CATEGORY */
-.container-category{
-  height: 100vh;
-}
-.question{
-  height: 55%;
-  background-color: #E4D3CC;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: left;
-}
-.question > div{
-  max-width: 1440px;
-  margin: 0 auto;
-}
-.questionNumbers{
-  color: #341D9D;
-  margin: 0;
-  font-size: 20px;
-  font-family: 'DamascusMedium', sans-serif;
-}
-
-.question-flex{
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.categoryTitle{
-  text-transform: uppercase;
-}
-.questionTitle{
-  font-family: 'DamascusMedium', sans-serif;
-  color: #707070;
-  font-size: 20px;
-  margin: 0;
-}
-.questionAnswerInput{
-  margin-top: -34px;
-}
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #341D9D;
-  text-align: center;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: #341D9D;
-  text-align: center;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: #341D9D;
-  text-align: center;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: #341D9D;
-  text-align: center;
-}
-input, .questionSubmit{
-  height: 67px;
-  padding: 0 10px;
-  border-radius: 25px;
-  font-size: 20px;
-  outline: none;
-}
-input{
-  color: #341D9D;
-  border: 3px solid #341D9D;
-  width: 350px;
-  margin-right: 30px;
-}
-.questionSubmit{
-  background-color: #341D9D;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  width: 100px;
-}
-/* FIN PAGE CATEGORY */
-
-
-/* MOBILE */
-
-@media only screen and (max-width: 1023px){
-      .category{
-        width: 45%;
-      }
-    }
-
-@media only screen and (min-width: 1023px){
-  .categories:nth-child(10), .categories:nth-child(11), .categories:nth-child(12){
-    margin-bottom: 0;
-}
-
-  .categories:nth-child(1), .categories:nth-child(2), .categories:nth-child(3){
-    margin-top: 20px;
-  }
-}
-
-/* FIN MOBILE */
+/* GENERAL */
