--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -2,10 +2,10 @@
 /* HOMEPAGE */
 
 .header-content{
-  height: 13%;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
+  height: 13%;
+  justify-content: center;
 }
 
 .container-content{
@@ -13,37 +13,42 @@
 }
 
 .container{
+  align-items: center;
   background-color: #E4D3CC;
-  max-width: 100%;
-  height: 87%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 87%;
   justify-content: center;
+  max-width: 100%;
 }
 
 .container-categories{
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 0 auto;
+  
 }
-
 .categories{
-  width: 26%;
-  display: inline-block;
-  color: white;
   background-color: #341D9D;
+  border-radius: 20px;
+  color: white;
+  display: inline-block;
+  font-size: 30px;
   margin-bottom: 50px;
   padding: 29px 0;
   text-decoration: none;
-  border-radius: 20px;
-  font-size: 30px;
   text-transform: lowercase;
+  width: 26%;
 }
 
 .categories::first-letter{
   text-transform: uppercase;
+}
+
+h2 {
+  color: #707070;
+  margin-bottom: 75px;
 }
 
 /* FIN HOMEPAGE */
